--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@ckeditor/ckeditor5-react": "^9.4.0",
     "@reduxjs/toolkit": "^2.3.0",
+    "axios": "^1.7.9",
     "ckeditor5": "^43.3.1",
     "ckeditor5-premium-features": "^43.3.1",
     "flowbite": "^2.5.2",
     "flowbite-react": "^0.10.2",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
