--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^7.0.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
