--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@ckeditor/ckeditor5-react": "^9.4.0",
+    "@ckeditor/ckeditor5-build-classic": "^44.3.0",
+    "@ckeditor/ckeditor5-react": "^9.5.0",
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.9",
     "ckeditor5": "^43.3.1",
@@ -19,7 +20,10 @@
     "flowbite-react": "^0.10.2",
     "js-cookie": "^3.0.5",
     "luxon": "^3.5.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-datepicker": "^8.2.1",
+    "react-datetime-picker": "^6.0.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^7.0.1",
