--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ckeditor/ckeditor5-react": "^9.5.0",
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.9",
     "ckeditor5": "^43.3.1",
     "ckeditor5-premium-features": "^43.3.1",
     "flowbite": "^2.5.2",
@@ -22,6 +23,7 @@
     "luxon": "^3.5.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^8.2.1",
     "react-datetime-picker": "^6.0.1",
     "react-dom": "^18.3.1",
