--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "js-cookie": "^3.0.5",
     "luxon": "^3.5.0",
     "moment": "^2.30.1",
+    "qr-scanner": "^1.4.2",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^8.2.1",
